--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+  	<link rel="stylesheet" href="styles.css">
+	</head>
     <title>Siddhant Sancheti - Resume</title>
     <style>
         body {
