--- a/index.html
+++ b/index.html
@@ -1,87 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siddhant Sancheti - Resume</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>My Personal Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <!-- Hero Section -->
     <header>
-        <div class="container hero">
-            <img src="your-image.jpg" alt="Siddhant Sancheti" class="hero-image">
-            <div class="hero-text">
-                <h1>Siddhant Sancheti</h1>
-                <p><a href="mailto:siddhantsancheti5@gmail.com">siddhantsancheti5@gmail.com</a> | +1 (628) 306-2312</p>
-                <p><a href="https://www.linkedin.com/in/siddhantsancheti/" target="_blank">LinkedIn</a> | <a
-                        href="https://github.com/sidumesh3" target="_blank">GitHub</a></p>
-            </div>
-        </div>
+        <h1>Welcome to My Personal Website</h1>
     </header>
 
-    <!-- Navigation Bar -->
-    <nav>
-        <ul>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#skills">Skills</a></li>
-        </ul>
-    </nav>
-
-    <!-- Education Section -->
-    <section id="education" class="section">
-        <h2>Education</h2>
-        <div class="card">
-            <h3>University of San Francisco</h3>
-            <p>Master's in Entrepreneurship and Innovation, May 2025</p>
-            <p>3.6/4.0 GPA</p>
+    <section class="image-gallery">
+        <!-- Image gallery with transition effect -->
+        <div class="image-slide">
+            <img src="images/image1.jpg" alt="Image 1" class="gallery-image">
         </div>
-        <div class="card">
-            <h3>The LNM Institute of Information Technology</h3>
-            <p>Bachelor of Technology in Mechanical Engineering, June 2022</p>
+        <div class="image-slide">
+            <img src="images/image2.jpg" alt="Image 2" class="gallery-image">
         </div>
-    </section>
-
-    <!-- Experience Section -->
-    <section id="experience" class="section">
-        <h2>Experience</h2>
-        <div class="card">
-            <h3>Product Manager Intern - Stealth Startup (Nuff Cash)</h3>
-            <p>January 2025 – Present</p>
-            <ul>
-                <li>Led strategic planning and business roadmap development.</li>
-                <li>Developed financial models optimizing pricing by 10%.</li>
-            </ul>
+        <div class="image-slide">
+            <img src="images/image3.jpg" alt="Image 3" class="gallery-image">
         </div>
-        <div class="card">
-            <h3>Product Strategy Consultant - Malloy Group</h3>
-            <p>November 2024 – Present</p>
-            <ul>
-                <li>Researched market strategies for sustainable startup.</li>
-            </ul>
+        <div class="image-slide">
+            <img src="images/image4.jpg" alt="Image 4" class="gallery-image">
+        </div>
+        <div class="image-slide">
+            <img src="images/image5.jpg" alt="Image 5" class="gallery-image">
+        </div>
+        <div class="image-slide">
+            <img src="images/image6.jpg" alt="Image 6" class="gallery-image">
+        </div>
+        <div class="image-slide">
+            <img src="images/image7.jpg" alt="Image 7" class="gallery-image">
         </div>
     </section>
 
-    <!-- Skills Section -->
-    <section id="skills" class="section">
-        <h2>Skills</h2>
-        <ul>
-            <li>MS Excel, Word, PowerPoint</li>
-            <li>SEO, Generative AI</li>
-            <li>SQL, Jira, Notion, Canva</li>
-        </ul>
-    </section>
-
-    <!-- Footer -->
     <footer>
         <p>&copy; 2025 Siddhant Sancheti. All rights reserved.</p>
     </footer>
+	<script src="script.js"></script>
 
-    <script src="script.js"></script>
 </body>
-
 </html>
