--- a/index.html
+++ b/index.html
@@ -3,43 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
+    <title>Your Personal Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Personal Website</h1>
-    </header>
+    <!-- Removed the "Welcome to My Personal Website" text -->
 
-    <section class="image-gallery">
-        <!-- Image gallery with transition effect -->
-        <div class="image-slide">
-            <img src="images/image1.jpg" alt="Image 1" class="gallery-image">
-        </div>
-        <div class="image-slide">
-            <img src="images/image2.jpg" alt="Image 2" class="gallery-image">
-        </div>
-        <div class="image-slide">
-            <img src="images/image3.jpg" alt="Image 3" class="gallery-image">
-        </div>
-        <div class="image-slide">
-            <img src="images/image4.jpg" alt="Image 4" class="gallery-image">
-        </div>
-        <div class="image-slide">
-            <img src="images/image5.jpg" alt="Image 5" class="gallery-image">
-        </div>
-        <div class="image-slide">
-            <img src="images/image6.jpg" alt="Image 6" class="gallery-image">
-        </div>
-        <div class="image-slide">
-            <img src="images/image7.jpg" alt="Image 7" class="gallery-image">
-        </div>
+    <section id="slideshow">
+        <img src="images/image1.jpg" alt="Image 1" class="slide">
+        <img src="images/image2.jpg" alt="Image 2" class="slide">
+        <img src="images/image3.jpg" alt="Image 3" class="slide">
+        <img src="images/image4.jpg" alt="Image 4" class="slide">
+        <img src="images/image5.jpg" alt="Image 5" class="slide">
+        <img src="images/image6.jpg" alt="Image 6" class="slide">
+        <img src="images/image7.jpg" alt="Image 7" class="slide">
     </section>
 
     <footer>
-        <p>&copy; 2025 Siddhant Sancheti. All rights reserved.</p>
+        <p>Connect with me on <a href="https://www.linkedin.com/in/siddhantsancheti/">LinkedIn</a></p>
     </footer>
-	<script src="script.js"></script>
 
+    <!-- Link to JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
