--- a/index.html
+++ b/index.html
@@ -61,6 +61,53 @@
 
 </p><p>connect with Me
 </p></div><div class="IwXXkw _qImYg JbJFjg _CObZw" style="animation-delay: calc(0.9s);"></div></div></section><div><style>
+/* Ensure images maintain aspect ratio and do not stretch */
+img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    max-width: 800px; /* Adjust as needed */
+    display: block;
+    margin: 0 auto; /* Center images */
+}
+
+/* Improve background image contrast */
+.background-image {
+    position: relative;
+}
+
+.background-image::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); /* Dark overlay for better readability */
+}
+
+/* Ensure text is readable over background images */
+.background-image h1,
+.background-image p {
+    position: relative;
+    z-index: 1;
+    color: white;
+}
+
+/* Adjust spacing for consistency */
+.image-container {
+    text-align: center;
+    margin: 20px 0;
+}
+
+/* Make sure all images are responsive */
+@media (max-width: 768px) {
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+}
+
     .footer-overflow-container {
         display: flex;
         background-color: #000000;
