--- a/index.html
+++ b/index.html
@@ -61,6 +61,40 @@
 
 </p><p>connect with Me
 </p></div><div class="IwXXkw _qImYg JbJFjg _CObZw" style="animation-delay: calc(0.9s);"></div></div></section><div><style>
+
+/* Apply background image to the first section or body */
+.hero-section {
+    background-image: url('images/your-photo.jpg'); /* Update the path to your image */
+    background-size: cover; /* Ensure the image covers the entire section */
+    background-position: center; /* Center the image */
+    background-attachment: fixed; /* Keep it fixed while scrolling */
+    height: 100vh; /* Full viewport height */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white; /* Ensure text is visible */
+    text-align: center;
+    position: relative;
+}
+
+/* Optional: Add an overlay for better text visibility */
+.hero-section::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); /* Dark overlay (adjust transparency as needed) */
+}
+
+/* Ensure content inside is above the overlay */
+.hero-content {
+    position: relative;
+    z-index: 1;
+}
+
+
 /* Ensure images maintain aspect ratio and do not stretch */
 img {
     width: 100%;
