--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
-<div style="position: relative; width: 100%; height: 0; padding-top: 56.2225%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https://www.canva.com/design/DAGeUCVReZ8/VbYxd_4p8bp1ksLN01JsuQ/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+<div style="position: relative; width: 100%; height: 1200px;  
+box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em;  
+overflow: hidden; border-radius: 8px;">
+  <iframe loading="lazy" scrolling="no"
+    style="position: absolute; width: 100%; height: 100%; top: 0; left: 0;  
+    border: none; padding: 0; margin: 0; overflow: hidden;"
+    src="https://www.canva.com/design/DAGeUCVReZ8/VbYxd_4p8bp1ksLN01JsuQ/view?embed" 
+    allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
+
+<style>
+  /* Hide Canva branding and UI elements */
+  a[href*="canva.com"], div[style*="canva.com"], iframe + div {
+    display: none !important;
+    visibility: hidden !important;
+  }
+
+  /* Hide scrollbars */
+  iframe::-webkit-scrollbar {
+    display: none;
+  }
+</style>
